email initial part written

--- a/love/templates/index.html
+++ b/love/templates/index.html
@@ -85,9 +85,11 @@
 		
 		
 	</form>
+	<ul>
 	{% for each in crush %}
-	{{each.name}}
+	<li>{{each.name}}-{{each.cname}}</li>
 	{%endfor%}
+</ul>
 	
 </div>
 </body>
